--- a/react_intro/task_3/dashboard/src/Notifications.css
+++ b/react_intro/task_3/dashboard/src/Notifications.css
@@ -1,7 +1,8 @@
 .Notifications {
   position: relative;
-  border: auto;
-  padding: auto;
+  border: 5px;
+  padding: 5px;
+  border: 2px dashed red;
 }
 
 li[data-priority='default'] {
